@@ -10,6 +10,7 @@
     <string name="softbutton_text">Text (if TEXT or BOTH):</string>
     <string name="softbutton_image">Image (if IMAGE or BOTH):</string>
     <string name="softbutton_isHighlighted">Highlighted?</string>
+    <string name="softbutton_useSystemAction">Use System Action</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_soft_buttons_list">SoftButtons List</string>
